<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pleasework"
    android:gravity="center"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="492dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="396dp"
            android:layout_height="74dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="87dp"
                android:layout_height="74dp"
                android:layout_marginTop="5sp"
                android:layout_marginLeft="50dp"
                app:srcCompat="@drawable/baseline_check_24" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="245dp"
                android:layout_height="84dp"
                android:text="@string/ECOSL"
                android:textColor="@color/black"
                android:textSize="70sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/pleasework"
            android:hint="@string/_2002690083_ecosl_lk"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/material_dynamic_neutral50"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/Password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/pleasework"
            android:hint="NIC - pssword"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/material_dynamic_neutral40"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:backgroundTint="#ECC080"
            android:text="@string/login"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="29dp"
            android:text="@string/for_forget_password_and_other_profile_info_contact"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:text="@string/_0223344556"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_9411435789"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>